# new-project

./: .gitignore  README.md  pyproject.toml
src/new_project/: __init__.py  cli.py  errors.py
src/new_project/application/: create_project.py  list_templates.py  template_context.py
src/new_project/commands/: create.py  list_template_variables.py  list_templates.py
src/new_project/presentation/: __init__.py  template_views.py
src/new_project/templates/: __init__.py  base.py  registry.py
src/new_project/templates/go_cli/: cookiecutter.json
src/new_project/templates/go_cli/{{ cookiecutter.project_slug }}/: README.md  config.go  go.mod  main.go
src/new_project/templates/html_static/: cookiecutter.json
src/new_project/templates/html_static/{{ cookiecutter.project_slug }}/: README.md  index.html  styles.css
src/new_project/templates/jupyter_notebook/: cookiecutter.json
src/new_project/templates/jupyter_notebook/{{ cookiecutter.project_slug }}/: .gitignore  AGENTS.md  README.md  pyproject.toml
src/new_project/templates/jupyter_notebook/{{ cookiecutter.project_slug }}/notebook/: example.ipynb
src/new_project/templates/jupyter_notebook/{{ cookiecutter.project_slug }}/src/: ipython_helpers.py  notebook.py
src/new_project/templates/jupyter_notebook/{{ cookiecutter.project_slug }}/tests/: test_main.py
src/new_project/templates/llm_api/: cookiecutter.json
src/new_project/templates/llm_api/{{ cookiecutter.project_slug }}/: Cargo.toml  Dockerfile  README.md  compose.yaml
src/new_project/templates/llm_api/{{ cookiecutter.project_slug }}/src/: agent.rs  config.rs  error.rs  mcp.rs  memory.rs  state.rs  tools.rs
src/new_project/templates/llm_chat/: cookiecutter.json
src/new_project/templates/llm_chat/{{ cookiecutter.project_slug }}/: Dockerfile  README.md  compose.yaml  index.html  package.json  tsconfig.json
src/new_project/templates/llm_chat/{{ cookiecutter.project_slug }}/src/: app.tsx  main.tsx
src/new_project/templates/llm_mcp/: cookiecutter.json
src/new_project/templates/llm_mcp/{{ cookiecutter.project_slug }}/: Cargo.toml  Dockerfile  README.md  compose.yaml
src/new_project/templates/llm_mcp/{{ cookiecutter.project_slug }}/src/: config.rs  error.rs  jsonrpc.rs  main.rs  prompts.rs  resources.rs  server.rs  tools.rs
src/new_project/templates/llm_stack/: cookiecutter.json
src/new_project/templates/llm_stack/{{ cookiecutter.project_slug }}/: README.md  compose.yaml
src/new_project/templates/llm_stack/{{ cookiecutter.project_slug }}/llm-api/: Cargo.toml  Dockerfile  mcp_servers.example.json
src/new_project/templates/llm_stack/{{ cookiecutter.project_slug }}/llm-api/src/: main.rs  models.rs  providers.rs
src/new_project/templates/llm_stack/{{ cookiecutter.project_slug }}/llm-chat/: Dockerfile  nginx.conf.template  package.json
src/new_project/templates/llm_stack/{{ cookiecutter.project_slug }}/llm-chat/src/: app.tsx  styles.css
src/new_project/templates/node_cli/: cookiecutter.json
src/new_project/templates/node_cli/{{ cookiecutter.project_slug }}/: README.md  package.json  tsconfig.json
src/new_project/templates/node_cli/{{ cookiecutter.project_slug }}/src/: app.ts  cli.ts  config.ts  index.ts
src/new_project/templates/node_docs/: cookiecutter.json
src/new_project/templates/node_docs/{{ cookiecutter.project_slug }}/: Dockerfile  README.md  compose.yaml  index.html  package.json  tsconfig.json
src/new_project/templates/node_docs/{{ cookiecutter.project_slug }}/src/: app.tsx  content-loader.ts  index.tsx  styles.css
src/new_project/templates/node_docs/{{ cookiecutter.project_slug }}/src/content/guides/: navigation.md
src/new_project/templates/node_docs/{{ cookiecutter.project_slug }}/src/content/overview/: getting-started.md
src/new_project/templates/python_cli/: cookiecutter.json
src/new_project/templates/python_cli/{{ cookiecutter.project_slug }}/: README.md  pyproject.toml
src/new_project/templates/python_cli/{{ cookiecutter.project_slug }}/src/{{ cookiecutter.package_name }}/: app.py  cli.py  config.py
src/new_project/templates/rust_cli/: cookiecutter.json
src/new_project/templates/rust_cli/{{ cookiecutter.project_slug }}/: Cargo.toml  README.md
src/new_project/templates/rust_cli/{{ cookiecutter.project_slug }}/src/: app.rs  cli.rs  config.rs  main.rs
src/new_project/templates/rust_rest_postgres/: cookiecutter.json
src/new_project/templates/rust_rest_postgres/{{ cookiecutter.project_slug }}/: .env.example  Cargo.toml  Dockerfile  README.md  compose.yaml
src/new_project/templates/rust_rest_postgres/{{ cookiecutter.project_slug }}/src/: config.rs  error.rs  main.rs  models.rs  state.rs
src/new_project/templates/rust_rest_postgres/{{ cookiecutter.project_slug }}/src/routes/: health.rs  mod.rs  todos.rs
src/new_project/templates/solid_site/: cookiecutter.json
src/new_project/templates/solid_site/{{ cookiecutter.project_slug }}/: README.md  app.config.ts  deno.json  package.json  tsconfig.json
src/new_project/templates/solid_site/{{ cookiecutter.project_slug }}/src/: app.tsx  entry-server.tsx
src/new_project/templates/solid_site/{{ cookiecutter.project_slug }}/src/routes/: [...404].tsx  index.mdx
src/new_project/templates/solid_site/{{ cookiecutter.project_slug }}/src/routes/guide/: getting-started.mdx
src/new_project/templates/solid_site/{{ cookiecutter.project_slug }}/src/routes/reference/: project-structure.mdx
src/new_project/templates/static_html_site/: cookiecutter.json
src/new_project/templates/static_html_site/{{ cookiecutter.project_slug }}/: README.md
tests/: test_create_project.py
