[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
readme = "README.md"
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyterlab",
    "pytest",
    "python-dotenv>=1.2.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
main = "src.main:main"
notebook = "src.notebook:main"
