[package]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
edition = "2024"
description = "{{ cookiecutter.description }}"

[dependencies]
axum = { version = "0.8.9", features = ["http1", "json", "tokio"] }
chrono = { version = "0.4.42", features = ["clock"] }
futures-util = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "sync", "io-std", "io-util"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4"] }
