[package]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
edition = "2024"
description = "{{ cookiecutter.description }}"

[dependencies]
axum = "0.8.9"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "migrate"] }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "net"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing-subscriber = "0.3.23"

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
